[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edwh-robin-plugin"
dynamic = ["version"]
description = 'robin project with a plugin to be discovered from the edwh package'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["edwh"]
authors = [
    { name = "Remco Boerma", email = "remco.b@educationwarehouse.nl" },
    { name = "Robin van der Noord", email = "robin.vdn@educationwarehouse.nl" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    'edwh',
    'edwh-b2-plugin',
    'edwh-bundler-plugin',
    'edwh-devdb-plugin',
    'edwh-files-plugin',
    'edwh-git-plugin',
    'edwh-multipass-plugin',
    'edwh-pipcompile-plugin',
    'edwh-restic-plugin',
    'edwh-server-provisioning-plugin',
    'edwh-uptime-plugin',
]

[project.optional-dependencies]
dev = [
    "hatch",
    "python-semantic-release<8",
    # "black",
]

[project.urls]
Documentation = "https://github.com/robinvandernoord/edwh-robin-plugin#readme"
Issues = "https://github.com/robinvandernoord/edwh-robin-plugin/issues"
Source = "https://github.com/robinvandernoord/edwh-robin-plugin"

# https://packaging.python.org/en/latest/guides/creating-and-discovering-plugins/#using-package-metadata
[project.entry-points."edwh.tasks"]
robin = "edwh_robin_plugin.robin_plugin"

[tool.hatch.version]
path = "src/edwh_robin_plugin/__about__.py"

[tool.semantic_release]
branch = "master"
version_variable = "src/edwh_robin_plugin/__about__.py:__version__"
change_log = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = "hatch build"

parser_angular_minor_types = "feat,minor"
parser_angular_patch_types = "fix,perf,refactor,build,chore,patch"

[tool.black]
target-version = ["py314"]
line-length = 120
skip-string-normalization = false

[tool.ruff]
target-version = "py314"
line-length = 120
select = [
    "F", # pyflake error
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "Q", # quotes
    "A", # builtins
    # "C4", # comprehensions - NO: doesn't allow dict()
    # "RET", # return - NO: annoying
    "SIM", # simplify
    "ARG", # unused arguments
    # "COM", # comma's - NO: annoying
    # "PTH", # use pathlib - NO: annoying
    "RUF", # ruff rules
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    "RUF013", # implicit Optional
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["edwh_robin_plugin"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["edwh_robin_plugin", "tests"]
branch = true
parallel = true
omit = [
    "src/edwh_robin_plugin/__about__.py",
]

[tool.coverage.paths]
edwh_robin_plugin = ["src/edwh_robin_plugin", "*/edwh-robin-plugin/src/edwh_robin_plugin"]
tests = ["tests", "*/edwh-robin-plugin/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
